<resources>
    <string name="app_name">Are We There Yet venkat34</string>
    <string name="dummy">Dummy</string>
    <string name="provider">Provider:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="newloc">New Location</string>
    <string name="newButton">New</string>
    <string name="eb2250">2250 Engineering</string>
    <string name="sparty">Sparty</string>
    <string name="home">Home</string>
    <string name="minskoff">Minskoff</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="driving">Driving</string>
    <string name="walking">Walking</string>
    <string name="bicycle">Bicycling</string>
    <string name="route">Display Route</string>
</resources>